--- a/GoF_Patterns/GoF_Patterns.csproj
+++ b/GoF_Patterns/GoF_Patterns.csproj
@@ -34,6 +34,10 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,12 +46,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FactoryMethod.cs" />
+    <Compile Include="Facade\FacadePresenter.cs" />
+    <Compile Include="Facade\Clr.cs" />
+    <Compile Include="Facade\Compiler.cs" />
+    <Compile Include="Facade\Interfaces\ICompiler.cs" />
+    <Compile Include="Facade\Interfaces\IFacade.cs" />
+    <Compile Include="Facade\Interfaces\IClr.cs" />
+    <Compile Include="Facade\Interfaces\ITextEditor.cs" />
+    <Compile Include="Facade\ProgrammerClient.cs" />
+    <Compile Include="Facade\TextEditor.cs" />
+    <Compile Include="Facade\VsIdeFacade.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Strategy\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
