add state pattern (completed)

--- a/GoF_Patterns/GoF_Patterns.csproj
+++ b/GoF_Patterns/GoF_Patterns.csproj
@@ -84,6 +84,20 @@
     <Compile Include="Memento\OwnExample\TownOriginator.cs" />
     <Compile Include="Memento\OwnExample\TownCheckPointsCaretaker.cs" />
     <Compile Include="Memento\OwnExample\TownMemento.cs" />
+    <Compile Include="State\ExampleProblem\EPWater.cs" />
+    <Compile Include="State\Example\Water.cs" />
+    <Compile Include="State\Example\GasWaterState.cs" />
+    <Compile Include="State\Example\IWaterState.cs" />
+    <Compile Include="State\Example\LiquidWaterState.cs" />
+    <Compile Include="State\Example\SolidWaterState.cs" />
+    <Compile Include="State\OwnExample\OeCrupier.cs" />
+    <Compile Include="State\OwnExample\FinishedDeckState.cs" />
+    <Compile Include="State\OwnExample\IDeckState.cs" />
+    <Compile Include="State\OwnExample\InUseDeckState.cs" />
+    <Compile Include="State\OwnExample\NewDeckState.cs" />
+    <Compile Include="State\OwnExample\ReadyDeckState.cs" />
+    <Compile Include="State\OwnProblem\Croupier.cs" />
+    <Compile Include="State\OwnProblem\DeckState.cs" />
     <Compile Include="Strategy\OwnExample\BernoulliApproach.cs" />
     <Compile Include="Strategy\OwnExample\ICalculationApproach.cs" />
     <Compile Include="Strategy\OwnExample\InputData.cs" />
@@ -94,6 +108,7 @@
     <Compile Include="Strategy\StrategyPresenter.cs" />
     <Compile Include="AbstractFactory\AbstractFactoryPresenter.cs" />
     <Compile Include="Memento\MementoPresenter.cs" />
+    <Compile Include="State\StatePresenter.cs" />
     <Compile Include="Template\TemplatePresenter.cs" />
     <Compile Include="Decorator\Example\APizza.cs" />
     <Compile Include="Decorator\Example\APizzaDecorator.cs" />
