--- a/GoF_Patterns/GoF_Patterns.csproj
+++ b/GoF_Patterns/GoF_Patterns.csproj
@@ -58,6 +58,12 @@
     <Compile Include="AbstractFactory\Example\RunMovement.cs" />
     <Compile Include="AbstractFactory\Example\Sword.cs" />
     <Compile Include="AbstractFactory\Example\WarriorFactory.cs" />
+    <Compile Include="Composite\Example\Component.cs" />
+    <Compile Include="Composite\Example\Directory.cs" />
+    <Compile Include="Composite\Example\File.cs" />
+    <Compile Include="Composite\OwnExample\XmlComponent.cs" />
+    <Compile Include="Composite\OwnExample\XmlLeaf.cs" />
+    <Compile Include="Composite\OwnExample\XmlNode.cs" />
     <Compile Include="Decorator\ExampleProblem\Pizza.cs" />
     <Compile Include="Decorator\Example\Training\Pizza.cs" />
     <Compile Include="Decorator\OwnExample\AirElemental.cs" />
@@ -109,6 +115,7 @@
     <Compile Include="AbstractFactory\AbstractFactoryPresenter.cs" />
     <Compile Include="Memento\MementoPresenter.cs" />
     <Compile Include="State\StatePresenter.cs" />
+    <Compile Include="Composite\CompositePresenter.cs" />
     <Compile Include="Template\TemplatePresenter.cs" />
     <Compile Include="Decorator\Example\APizza.cs" />
     <Compile Include="Decorator\Example\APizzaDecorator.cs" />
@@ -143,6 +150,8 @@
   <ItemGroup>
     <Folder Include="AbstractFactory\OwnExample\" />
     <Folder Include="AbstractFactory\OwnProblem\" />
+    <Folder Include="Composite\ExampleProblem\" />
+    <Folder Include="Composite\OwnProblem\" />
     <Folder Include="Decorator\OwnProblem\" />
     <Folder Include="Facade\OwnProblem\" />
     <Folder Include="Memento\ExampleProblem\" />
