--- a/GoF_Patterns/GoF_Patterns.csproj
+++ b/GoF_Patterns/GoF_Patterns.csproj
@@ -90,7 +90,9 @@
     <Compile Include="Memento\OwnExample\TownOriginator.cs" />
     <Compile Include="Memento\OwnExample\TownCheckPointsCaretaker.cs" />
     <Compile Include="Memento\OwnExample\TownMemento.cs" />
-    <Compile Include="Proxy\OwnExample\Class1.cs" />
+    <Compile Include="Proxy\OwnExample\ASubject.cs" />
+    <Compile Include="Proxy\OwnExample\LogStorage.cs" />
+    <Compile Include="Proxy\OwnExample\LogStorageProxy.cs" />
     <Compile Include="State\ExampleProblem\EPWater.cs" />
     <Compile Include="State\Example\Water.cs" />
     <Compile Include="State\Example\GasWaterState.cs" />
@@ -136,9 +138,9 @@
     <Compile Include="Facade\Example\ProgrammerClient.cs" />
     <Compile Include="Facade\Example\TextEditor.cs" />
     <Compile Include="Facade\Example\VsIdeFacade.cs" />
-    <Compile Include="Utils\CommonPresenter.cs" />
+    <Compile Include="Utils\PresenterFactory.cs" />
+    <Compile Include="Utils\IPresenter.cs" />
     <Compile Include="Utils\PatternType.cs" />
-    <Compile Include="Utils\PresentType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strategy\Example\Car.cs" />
