--- a/GoF_Patterns/GoF_Patterns.csproj
+++ b/GoF_Patterns/GoF_Patterns.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Composite\Example\File.cs" />
     <Compile Include="Composite\OwnExample\AComponent.cs" />
     <Compile Include="Composite\OwnExample\ComponentsRepository.cs" />
+    <Compile Include="Composite\OwnExample\ComponentXmlSerializer.cs" />
     <Compile Include="Composite\OwnExample\Composite.cs" />
     <Compile Include="Composite\OwnExample\Leaf.cs" />
     <Compile Include="Decorator\ExampleProblem\Pizza.cs" />
