--- a/GoF_Patterns/GoF_Patterns.csproj
+++ b/GoF_Patterns/GoF_Patterns.csproj
@@ -70,13 +70,13 @@
     <Compile Include="Bridge\Example\FreelanceProgrammer.cs" />
     <Compile Include="Bridge\Example\ILanguage.cs" />
     <Compile Include="Bridge\Example\Programmer.cs" />
-    <Compile Include="Command\Example\AntennaOnCommand.cs" />
-    <Compile Include="Command\Example\DefaultCommand.cs" />
-    <Compile Include="Command\Example\ICommand.cs" />
+    <Compile Include="Command\Example\Antenna\AntennaOnCommand.cs" />
+    <Compile Include="Command\Example\CommandStuff\DefaultCommand.cs" />
+    <Compile Include="Command\Example\CommandStuff\ICommand.cs" />
     <Compile Include="Command\Example\RemoteControlInvoker.cs" />
-    <Compile Include="Command\Example\TvAntennaReceiver.cs" />
-    <Compile Include="Command\Example\TvOnCommand.cs" />
-    <Compile Include="Command\Example\TVReceiver.cs" />
+    <Compile Include="Command\Example\Antenna\TvAntennaReceiver.cs" />
+    <Compile Include="Command\Example\TV\TvOnCommand.cs" />
+    <Compile Include="Command\Example\TV\TVReceiver.cs" />
     <Compile Include="Composite\Example\Component.cs" />
     <Compile Include="Composite\Example\Directory.cs" />
     <Compile Include="Composite\Example\File.cs" />
