--- a/GoF_Patterns/GoF_Patterns.csproj
+++ b/GoF_Patterns/GoF_Patterns.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Bridge\Example\FreelanceProgrammer.cs" />
     <Compile Include="Bridge\Example\ILanguage.cs" />
     <Compile Include="Bridge\Example\Programmer.cs" />
+    <Compile Include="Command\ExampleProblem\ICommand.cs" />
     <Compile Include="Command\Example\Antenna\AntennaOnCommand.cs" />
     <Compile Include="Command\Example\CommandStuff\DefaultCommand.cs" />
     <Compile Include="Command\Example\CommandStuff\ICommand.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Command\Example\Antenna\TvAntennaReceiver.cs" />
     <Compile Include="Command\Example\TV\TvOnCommand.cs" />
     <Compile Include="Command\Example\TV\TVReceiver.cs" />
+    <Compile Include="Command\Example\TV\VolumeCommand.cs" />
     <Compile Include="Composite\Example\Component.cs" />
     <Compile Include="Composite\Example\Directory.cs" />
     <Compile Include="Composite\Example\File.cs" />
@@ -190,7 +192,6 @@
     <Folder Include="Bridge\ExampleProblem\" />
     <Folder Include="Bridge\OwnExample\" />
     <Folder Include="Bridge\OwnProblem\" />
-    <Folder Include="Command\ExampleProblem\" />
     <Folder Include="Command\OwnExample\" />
     <Folder Include="Command\OwnProblem\" />
     <Folder Include="Composite\ExampleProblem\" />
